added kfold shuffling function

--- a/DataManagement/dataCheck.ipynb
+++ b/DataManagement/dataCheck.ipynb
@@ -16,7 +16,7 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "import sklearn as skl\n",
-    "import sklearn.utils, sklearn.preprocessing, sklearn.decomposition, sklearn.svm\n",
+    "import sklearn.utils, sklearn.preprocessing, sklearn.decomposition, sklearn.svm, sklearn.model_selection\n",
     "\n",
     "\n",
     "plt.rcParams['figure.figsize'] = (17, 5)\n"
@@ -3188,7 +3188,17 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def makeKfold(df, k):\n",
+    "    kf = skl.model_selection.KFold(n_splits = k, shuffle = True)\n",
+    "    df_collection = {}\n",
+    "    i = 0\n",
+    "    for train_index, test_index in kf.split(df):\n",
+    "        df_collection[i,\"training\"] = df.iloc[train_index]\n",
+    "        df_collection[i,\"testing\"] = df.iloc[test_index]\n",
+    "        i = i + 1\n",
+    "    return df_collection"
+   ]
   }
  ],
  "metadata": {
@@ -3207,7 +3217,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
