changed top_genre to genre_top everywhere. Added code for calculating mean accuracy

--- a/Data_Management/interfaceTest.ipynb
+++ b/Data_Management/interfaceTest.ipynb
@@ -33,7 +33,7 @@
        "  'song_title': array(['Electric Ave'], dtype=object),\n",
        "  'artist_name': array(['AWOL'], dtype=object),\n",
        "  'date': array(['2008-11-26 01:48:14'], dtype=object),\n",
-       "  'top_genre': array(['Hip-Hop'], dtype=object),\n",
+       "  'genre_top': array(['Hip-Hop'], dtype=object),\n",
        "  'set': array(['medium'], dtype=object)}]"
       ]
      },
