added info to FeatureSelection notebook, changed figure 4
added more information about how the mRMR results were obtained with the csv file created with the FeatureSelection jupyter file
also changed Figure 4 and the corresponding code to produce it so that the plots have a bit more space and are easier to read

--- a/Data_Management/FeatureSelection.ipynb
+++ b/Data_Management/FeatureSelection.ipynb
@@ -9,10 +9,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Reading features.csv\n",
-      "Reading tracks.csv\n",
-      "Reading echonest.csv\n",
-      "Reading genres.csv\n"
+      "Reading features.pkl\n",
+      "Reading tracks.pkl\n",
+      "Reading echonest.pkl\n",
+      "Reading genres.pkl\n"
      ]
     }
    ],
@@ -52,14 +52,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                               Specs        Score\n",
+      "                             Feature        Score\n",
       "295                 (mfcc, mean, 04)  1242.145874\n",
       "315               (mfcc, median, 04)  1212.966733\n",
       "312               (mfcc, median, 01)  1097.234798\n",
@@ -120,24 +120,72 @@
     "dfscores = pd.DataFrame(fit.scores_)\n",
     "dfcolumns = pd.DataFrame(Xdf.columns)\n",
     "\n",
-    "#concat two dataframes for better visualization \n",
+    "#concat the returned columns and their respective scores\n",
     "featureScores = pd.concat([dfcolumns,dfscores],axis=1)\n",
-    "featureScores.columns = ['Specs','Score']  #naming the dataframe columns\n",
-    "print(featureScores.nlargest(res,'Score'))  #print 50 best features"
+    "featureScores.columns = ['Feature','Score']\n",
+    "#print the selected number of best features according to univarite selection\n",
+    "print(featureScores.nlargest(res,'Score'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\gener\\Anaconda3\\lib\\site-packages\\pandas\\core\\reshape\\merge.py:617: UserWarning: merging between different levels can give an unintended result (1 levels on the left, 3 on the right)\n",
+      "  warnings.warn(msg, UserWarning)\n"
+     ]
+    }
+   ],
    "source": [
     "#create dataframe formatted for mRMR program\n",
     "df = reader.mergeFrames(Ydf, Xdf)\n",
     "df['genre_top'] = pd.factorize(df['genre_top'])[0] + 1\n",
     "\n",
-    "#output csv file to be read into C++ mRMR program. Needs to have instances of ', ' replaced with '/' in order to work\n",
-    "df.to_csv(r'mRMRdata.csv', index=False)"
+    "#output csv file to be read into C++ mRMR program. Needs to have instances of ', ' (comma with space, which\n",
+    "#appears in the column names) replaced with'/' or some other non-comma separating character in order to work\n",
+    "\n",
+    "df.to_csv(r'mRMRdata.csv', index=False)\n",
+    "\n",
+    "#I couldn't manage to get the mRMR python libary to install on my machine, so after some troubleshooting\n",
+    "#I used an executable on the mRMR project website.\n",
+    "#The program used to calculate mRMR feature selection is found at: http://home.penglab.com/proj/mRMR/\n",
+    "#I used the windows executible (but other OS versions exist), run in the same directory as mRMRdata.csv with the command:  \n",
+    "#mrmr_win32.exe -i mRMR.csv -t 0.01 -n 200 -s 10000\n",
+    "#although this command takes a long time to run, so reducing s (number of samples the program is run on), \n",
+    "#n (number of features to select), or increasing -t (threshold for converting continuous variables into\n",
+    "#distinct values) should decrease the time it takes to run this.\n",
+    "\n",
+    "\n",
+    "#mRMR results (in column index form):\n",
+    "#indices = [435, 295, 412, 314, 312, 275, 437, 331,\n",
+    "#          384, 317, 515, 449, 323, 377, 354, 462, 450, 321,\n",
+    "#          509, 387, 272, 315, 294, 517, 461, 292, 430, 277,\n",
+    "#          508, 379, 174, 428, 411, 386, 325, 375, 319, 426,\n",
+    "#          208, 510, 281, 352, 297, 436, 311, 385, 451, 440,\n",
+    "#          330, 399, 431, 380, 507, 394, 229, 303, 318, 467,\n",
+    "#          388, 373, 415, 301, 285, 406, 355, 381, 444, 429,\n",
+    "#          250, 279, 206, 376, 358, 327, 173, 414, 398, 338,\n",
+    "#          460, 299, 383, 416, 198, 468, 506, 438, 287, 196,\n",
+    "#          433, 445, 389, 335, 305, 278, 212, 382, 172, 395,\n",
+    "#          404, 427, 344, 310, 211, 231, 390, 329, 274, 204,\n",
+    "#          372, 458, 397, 214, 505, 166, 336, 293, 169, 378,\n",
+    "#          320, 209, 514, 343, 328, 356, 391, 471, 159, 205,\n",
+    "#          441, 234, 307, 497, 464, 290, 207, 276, 403, 459,\n",
+    "#          176, 283, 333, 238, 288, 175, 194, 452, 324, 442,\n",
+    "#          232, 434, 465, 298, 210, 254, 228, 472, 309, 362,\n",
+    "#          213, 496, 171, 405, 448, 286, 340, 401, 193, 291,\n",
+    "#          280, 302, 233, 454, 243, 308, 423, 253, 164, 170,\n",
+    "#          215, 443, 511, 199, 289, 313, 339, 230, 200, 488,\n",
+    "#          498, 282, 304, 392, 479, 334, 195, 402, 75, 410,\n",
+    "#          177, 192]\n",
+    "#these are not the exact same as the \"feature numbers\" that the mRMR program outputs, because those\n",
+    "#start at index 1. Each of these is one less than the feature numbers, so that they match a starting\n",
+    "#index of  0."
    ]
   },
   {
