cleaned up code and added comments

--- a/Data_Management/PandasDBTest.ipynb
+++ b/Data_Management/PandasDBTest.ipynb
@@ -24,17 +24,89 @@
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'track_id': 2,\n",
+       "  'song_title': array(['Food'], dtype=object),\n",
+       "  'artist_name': array(['AWOL'], dtype=object),\n",
+       "  'date': array(['2008-11-26 01:48:12'], dtype=object),\n",
+       "  'genre_top': array(['Hip-Hop'], dtype=object),\n",
+       "  'set': array(['small'], dtype=object),\n",
+       "  'X': feature         mfcc                                                    \\\n",
+       "  statistics  kurtosis                                                     \n",
+       "  number            01        02        03        04        05        06   \n",
+       "  track_id                                                                 \n",
+       "  2           3.856789  1.541901  0.000816  0.330728  0.118731 -0.342687   \n",
+       "  \n",
+       "  feature                                             ... spectral_contrast  \\\n",
+       "  statistics                                          ...              skew   \n",
+       "  number            07        08        09        10  ...                05   \n",
+       "  track_id                                            ...                     \n",
+       "  2          -0.259252  0.146735  0.410656 -0.162872  ...           0.43285   \n",
+       "  \n",
+       "  feature                                                               \\\n",
+       "  statistics                         std                                 \n",
+       "  number            06      07        01        02        03        04   \n",
+       "  track_id                                                               \n",
+       "  2           1.690805 -1.5719  4.541557  4.321756  3.936234  3.144537   \n",
+       "  \n",
+       "  feature                                   \n",
+       "  statistics                                \n",
+       "  number            05        06        07  \n",
+       "  track_id                                  \n",
+       "  2           3.310087  3.096597  7.622641  \n",
+       "  \n",
+       "  [1 rows x 189 columns]},\n",
+       " {'track_id': 1507,\n",
+       "  'song_title': array(['Food'], dtype=object),\n",
+       "  'artist_name': array(['Ric Royer &amp; G. Lucas Crane'], dtype=object),\n",
+       "  'date': array(['2008-11-26 03:02:03'], dtype=object),\n",
+       "  'genre_top': array(['Experimental'], dtype=object),\n",
+       "  'set': array(['large'], dtype=object),\n",
+       "  'X': feature         mfcc                                                   \\\n",
+       "  statistics  kurtosis                                                    \n",
+       "  number            01        02        03       04        05        06   \n",
+       "  track_id                                                                \n",
+       "  1507       -0.867375 -1.264407  0.418227  1.12198  0.079978 -0.745648   \n",
+       "  \n",
+       "  feature                                             ... spectral_contrast  \\\n",
+       "  statistics                                          ...              skew   \n",
+       "  number            07        08        09        10  ...                05   \n",
+       "  track_id                                            ...                     \n",
+       "  1507       -0.836468 -0.214756 -0.543199 -0.615903  ...          0.121286   \n",
+       "  \n",
+       "  feature                                                                 \\\n",
+       "  statistics                           std                                 \n",
+       "  number            06        07        01        02        03        04   \n",
+       "  track_id                                                                 \n",
+       "  1507       -0.139151 -0.040098  6.407063  5.240584  5.065089  4.056613   \n",
+       "  \n",
+       "  feature                                    \n",
+       "  statistics                                 \n",
+       "  number            05         06        07  \n",
+       "  track_id                                   \n",
+       "  1507        5.317126  10.268276  8.381847  \n",
+       "  \n",
+       "  [1 rows x 189 columns]}]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "#returns a list of dictionaries. Each dictionary is a song that was found\n",
     "results = db.query('food', False)\n",
-    "# a = results['track_data']\n",
-    "# a['song_title']\n",
-    "data = results['track_data']"
+    "data = results['track_data']\n",
+    "data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -180,193 +252,17 @@
        "[1 rows x 189 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#get first result(there might be duplicates)\n",
     "firstSong = data[0]\n",
-    "firstSong['X'][['mfcc', 'spectral_contrast']]"
+    "#features that are then fed into the model\n",
+    "firstSong['X']"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead tr th {\n",
-       "        text-align: left;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead tr:last-of-type th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr>\n",
-       "      <th>feature</th>\n",
-       "      <th colspan=\"10\" halign=\"left\">chroma_cens</th>\n",
-       "      <th>...</th>\n",
-       "      <th colspan=\"3\" halign=\"left\">tonnetz</th>\n",
-       "      <th colspan=\"7\" halign=\"left\">zcr</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>statistics</th>\n",
-       "      <th colspan=\"10\" halign=\"left\">kurtosis</th>\n",
-       "      <th>...</th>\n",
-       "      <th colspan=\"3\" halign=\"left\">std</th>\n",
-       "      <th>kurtosis</th>\n",
-       "      <th>max</th>\n",
-       "      <th>mean</th>\n",
-       "      <th>median</th>\n",
-       "      <th>min</th>\n",
-       "      <th>skew</th>\n",
-       "      <th>std</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>number</th>\n",
-       "      <th>01</th>\n",
-       "      <th>02</th>\n",
-       "      <th>03</th>\n",
-       "      <th>04</th>\n",
-       "      <th>05</th>\n",
-       "      <th>06</th>\n",
-       "      <th>07</th>\n",
-       "      <th>08</th>\n",
-       "      <th>09</th>\n",
-       "      <th>10</th>\n",
-       "      <th>...</th>\n",
-       "      <th>04</th>\n",
-       "      <th>05</th>\n",
-       "      <th>06</th>\n",
-       "      <th>01</th>\n",
-       "      <th>01</th>\n",
-       "      <th>01</th>\n",
-       "      <th>01</th>\n",
-       "      <th>01</th>\n",
-       "      <th>01</th>\n",
-       "      <th>01</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>track_id</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>148133</th>\n",
-       "      <td>-0.212858</td>\n",
-       "      <td>-0.931763</td>\n",
-       "      <td>0.670636</td>\n",
-       "      <td>-0.215534</td>\n",
-       "      <td>-0.827843</td>\n",
-       "      <td>-0.786714</td>\n",
-       "      <td>-1.051842</td>\n",
-       "      <td>-0.6591</td>\n",
-       "      <td>-1.254777</td>\n",
-       "      <td>-0.951957</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.143602</td>\n",
-       "      <td>0.027572</td>\n",
-       "      <td>0.026145</td>\n",
-       "      <td>16.074034</td>\n",
-       "      <td>0.672852</td>\n",
-       "      <td>0.073851</td>\n",
-       "      <td>0.056152</td>\n",
-       "      <td>0.001953</td>\n",
-       "      <td>2.973313</td>\n",
-       "      <td>0.062099</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>1 rows × 518 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "feature    chroma_cens                                                    \\\n",
-       "statistics    kurtosis                                                     \n",
-       "number              01        02        03        04        05        06   \n",
-       "track_id                                                                   \n",
-       "148133       -0.212858 -0.931763  0.670636 -0.215534 -0.827843 -0.786714   \n",
-       "\n",
-       "feature                                           ...   tonnetz            \\\n",
-       "statistics                                        ...       std             \n",
-       "number            07      08        09        10  ...        04        05   \n",
-       "track_id                                          ...                       \n",
-       "148133     -1.051842 -0.6591 -1.254777 -0.951957  ...  0.143602  0.027572   \n",
-       "\n",
-       "feature                     zcr                                          \\\n",
-       "statistics             kurtosis       max      mean    median       min   \n",
-       "number            06         01        01        01        01        01   \n",
-       "track_id                                                                  \n",
-       "148133      0.026145  16.074034  0.672852  0.073851  0.056152  0.001953   \n",
-       "\n",
-       "feature                         \n",
-       "statistics      skew       std  \n",
-       "number            01        01  \n",
-       "track_id                        \n",
-       "148133      2.973313  0.062099  \n",
-       "\n",
-       "[1 rows x 518 columns]"
-      ]
-     },
-     "execution_count": 39,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "results['features']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
