--- a/Data_Management/missPlots.ipynb
+++ b/Data_Management/missPlots.ipynb
@@ -17,6 +17,7 @@
     "import pandas as pd\n",
     "from binInterface import featRead\n",
     "import sys\n",
+    "#might have to change way path is added depending on Operatin Sys\n",
     "sys.path.insert(0, '../ML_Algs')\n",
     "import ANN_class"
    ]
@@ -319,7 +320,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
