--- a/Data_Management/PandasDBTest.ipynb
+++ b/Data_Management/PandasDBTest.ipynb
@@ -6,6 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Author(s): Jose Torres-Vargas\n",
     "from pandasDB import DataBase"
    ]
   },
