--- a/Data_Management/interfaceTest.ipynb
+++ b/Data_Management/interfaceTest.ipynb
@@ -6,6 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Author(s): Jose Torres-Vargas\n",
     "from CSVInterface import featRead\n",
     "import pandas as pd\n",
     "import CSVInterface as face"
