--- a/Data_Management/dataCheck.ipynb
+++ b/Data_Management/dataCheck.ipynb
@@ -6,6 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Author(s): Jose Torres-Vargas\n",
     "%matplotlib inline\n",
     "\n",
     "import os\n",
