--- a/Data_Management/missPlots.ipynb
+++ b/Data_Management/missPlots.ipynb
@@ -14,6 +14,7 @@
     }
    ],
    "source": [
+    "#Author(s): Jose Torres-Vargas\n",
     "import pandas as pd\n",
     "from binInterface import featRead\n",
     "import sys\n",
