--- a/Data_Management/FeatureSelection.ipynb
+++ b/Data_Management/FeatureSelection.ipynb
@@ -17,6 +17,9 @@
     }
    ],
    "source": [
+    "#FeatureSelection.ipynb\n",
+    "#authors: Chance Stewart\n",
+    "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "from sklearn.feature_selection import SelectKBest\n",
@@ -212,7 +215,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
